テキストエリア横幅変更

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             box-shadow: 0 0 5px #EEEEEE;
         }
         textarea {
+            width: 90%;
             border: none;
             box-shadow: 0 0 5px #EEEEEE;
         }
